<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome_text">Welcome to Neilson Cafe!</string>
    <string name="checkout_btn_text">Go To Checkout 🛒</string>
    <string name="banner_art_desc">Banner Art</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cancel">Cancel</string>
    <string name="subtotal">Subtotal</string>

    <string name="addon_name_placeholder">Addon Name</string>
    <string name="select_type">Select Type</string>
    <string name="button_text">Add to Cart 🛒 </string>

    <string name="order_sandwich">Order a Sandwich!</string>
    <string name="select_bread">Select Bread:</string>
    <string name="select_protein">Select Protein:</string>
    <string name="add_ons">Add-ons:</string>
    <string name="add_to_order">Add to Cart 🛒</string>

    <string name="select_size">Select Size</string>
    <string name="select_add_ons">Select AddOns</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="order_coffee_text">Order a Coffee!</string>

</resources>