<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coffee_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeViewController">

    <include layout="@layout/app_bar_main" />
    <EditText
        android:id="@+id/subtotalTextCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/addToCartCoffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeQuantitySpinner"
        app:layout_constraintVertical_bias="0.966" />

    <Button
        android:id="@+id/addToCartCoffee"
        android:layout_width="202dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_text"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/coffeeQuantitySpinner"
        android:layout_width="285dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeAddOnListView" />

    <ListView
        android:id="@+id/coffeeAddOnListView"
        android:layout_width="284dp"
        android:layout_height="344dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeTypeRadioGroup" />

    <RadioGroup
        android:id="@+id/coffeeTypeRadioGroup"
        android:layout_width="323dp"
        android:layout_height="66dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6Coffee">


    </RadioGroup>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="277dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee" />

    <TextView
        android:id="@+id/textView6Coffee"
        android:layout_width="411dp"
        android:layout_height="23dp"
        android:rotationX="-15"
        android:text="Order a Coffee!"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_size"
        app:layout_constraintEnd_toStartOf="@+id/coffeeTypeRadioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coffeeTypeRadioGroup" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_add_ons"
        app:layout_constraintEnd_toStartOf="@+id/coffeeAddOnListView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coffeeAddOnListView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_quantity"
        app:layout_constraintEnd_toStartOf="@+id/coffeeQuantitySpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coffeeQuantitySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>